# perihelion-infrastructure

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  security.yml  update_branches.yml
docs/: ROADMAP.md  gitlab_architecture_core.md  gitlab_implementation_plan.md  gitlab_observability_operations.md  gitlab_security_network.md  gitlab_supporting_services.md
docs/tero-index/: INDEX.md  MANIFEST.toml  index.json
helm/gitlab-runner-controller/: Chart.yaml  values.yaml
k8s/: kustomization.yaml
k8s/logging/: 00-namespace.yaml  01-fluent-bit-config.yaml
k8s/manifests/: configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
k8s/monitoring/: 00-namespace.yaml  01-rbac.yaml  02-network-policies.yaml  03-prometheus-config.yaml  04-prometheus-deployment.yaml  05-alertmanager-config.yaml  06-alertmanager-deployment.yaml  07-grafana-config.yaml  08-grafana-deployment.yaml  09-resource-quotas.yaml  10-grafana-ingress.example.yaml
k8s/monitoring/dashboards/: gitlab-dashboard.json  security-dashboard.json
k8s/namespaces/: gitlab-runner-system.yaml
k8s/security/: network-policies.yaml  pod-security-standards.yaml  rbac.yaml
k8s/vault/: 00-namespace.yaml  01-external-secrets-operator.yaml
scripts/: check.sh
src/gitlab_runner_controller/: __init__.py  cli.py
src/gitlab_runner_controller/controllers/: __init__.py  runner_controller.py
src/gitlab_runner_controller/models/: runner.py
src/gitlab_runner_controller/utils/: __init__.py  gitlab_client.py  kubernetes_client.py  security.py
tests/security/: test_security_validator.py
